; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/um/os-Linux/extr_signal.c_real_alarm_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/um/os-Linux/extr_signal.c_real_alarm_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sigcontext = type { i32 }
%struct.uml_pt_regs = type { i64 }

@SIGVTALRM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sigcontext*)* @real_alarm_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @real_alarm_handler(%struct.sigcontext* %0) #0 {
  %2 = alloca %struct.sigcontext*, align 8
  %3 = alloca %struct.uml_pt_regs, align 8
  store %struct.sigcontext* %0, %struct.sigcontext** %2, align 8
  %4 = load %struct.sigcontext*, %struct.sigcontext** %2, align 8
  %5 = icmp ne %struct.sigcontext* %4, null
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.sigcontext*, %struct.sigcontext** %2, align 8
  %8 = call i32 @copy_sc(%struct.uml_pt_regs* %3, %struct.sigcontext* %7)
  br label %9

9:                                                ; preds = %6, %1
  %10 = getelementptr inbounds %struct.uml_pt_regs, %struct.uml_pt_regs* %3, i32 0, i32 0
  store i64 0, i64* %10, align 8
  %11 = call i32 (...) @unblock_signals()
  %12 = load i32, i32* @SIGVTALRM, align 4
  %13 = call i32 @timer_handler(i32 %12, %struct.uml_pt_regs* %3)
  ret void
}

declare dso_local i32 @copy_sc(%struct.uml_pt_regs*, %struct.sigcontext*) #1

declare dso_local i32 @unblock_signals(...) #1

declare dso_local i32 @timer_handler(i32, %struct.uml_pt_regs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
